crates/alder-parse/src/snapshots/alder_parse__type___tests__parenthesized_function.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\n(a -> b) -> List a -> List b"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 29,
        },
    },
    value: Lambda {
        from: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Lambda {
                from: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                to: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
            },
        },
        to: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 13,
                },
                end: Position {
                    line: 1,
                    column: 29,
                },
            },
            value: Lambda {
                from: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 19,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        name: "List",
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 19,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
                to: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 23,
                        },
                        end: Position {
                            line: 1,
                            column: 29,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 27,
                            },
                        },
                        name: "List",
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 28,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 29,
                                    },
                                },
                                value: Var(
                                    "b",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    },
}
