crates/alder-parse/src/snapshots/alder_parse__type___tests__partial_constructor_hole.snap
---
source: crates/alder-parse/src/type_.rs
description: "Result[_, e]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Named {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: "Result",
                },
            ],
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Hole,
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 11,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Var {
                    name: "e",
                    args: [],
                },
            },
        ],
    },
}
