crates/alder-parse/src/snapshots/alder_parse__type___tests__record_error_boundary_field.snap
---
source: crates/alder-parse/src/type_.rs
description: "{ error: String }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Record {
        fields: [
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: "error",
                },
                optional: None,
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 10,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 16,
                                        },
                                    },
                                    value: "String",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            },
        ],
        ext: None,
    },
}
