crates/alder-parse/src/snapshots/alder_parse__type___tests__record_extension_multiple.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\n{ a | name : String, age : Int }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 33,
        },
    },
    value: Record {
        fields: [
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "name",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        name: "String",
                        args: [],
                    },
                },
            },
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 22,
                        },
                        end: Position {
                            line: 1,
                            column: 25,
                        },
                    },
                    value: "age",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 28,
                        },
                        end: Position {
                            line: 1,
                            column: 31,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 28,
                            },
                            end: Position {
                                line: 1,
                                column: 31,
                            },
                        },
                        name: "Int",
                        args: [],
                    },
                },
            },
        ],
        ext: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: "a",
            },
        ),
    },
}
